# fastapi-sqlmodel-alembic-migration

./: .gitignore  README.md  alembic.ini  pyproject.toml  pyrightconfig.json
.github/workflows/: poetry_pytest.yaml
db/: local-database.db
fastapi_app/: app.py  db.py
fastapi_app/api/: heros.py
fastapi_app/models/: hero.py
migrations/: env.py  script.py.mako
migrations/versions/: 142f191f3ca0_added_on_create_to_happen_on_creation_.py  476059bea450_trying_to_make_updated_at_and_created_.py  5efb4b9df6e4_added_on_create_to_happen_on_creation_.py  7096468045f8_put_it_optional_in_base.py  d6606035f261_added_default_creation_time.py  eac4a36f5991_initial_commit.py  ed8aa58e3851_added_on_create_to_happen_on_creation_.py
tests/: test_hero_model.py
